--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "author": "konoplitsky",
-  "keywords": [
-    "eslint",
-    "prettier",
-    "config"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint:ts": "eslint .",
     "lint:ts:fix": "eslint . --fix",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "mobx": "^6.13.6",
@@ -26,8 +22,16 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
+    "@chromatic-com/storybook": "3.2.4",
     "@eslint-react/eslint-plugin": "^1.26.2",
     "@eslint/js": "^9.17.0",
+    "@storybook/addon-essentials": "8.5.3",
+    "@storybook/addon-interactions": "8.5.3",
+    "@storybook/addon-onboarding": "8.5.3",
+    "@storybook/blocks": "8.5.3",
+    "@storybook/react": "8.5.3",
+    "@storybook/react-vite": "8.5.3",
+    "@storybook/test": "8.5.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
@@ -41,11 +45,14 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
+    "storybook": "8.5.3",
     "tailwindcss": "^4.0.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
@@ -54,5 +61,10 @@
   "lint-staged": {
     "*.js": "eslint . --fix",
     "*.ts": "eslint . --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
