--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint:ts": "eslint .",
     "lint:ts:fix": "eslint . --fix",
+    "test": "vitest",
     "preview": "vite preview",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
@@ -33,12 +34,14 @@
     "@storybook/react-vite": "8.5.3",
     "@storybook/test": "8.5.3",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
+    "jsdom": "^26.0.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
@@ -56,7 +59,8 @@
     "tailwindcss": "^4.0.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.0.5"
   },
   "lint-staged": {
     "*.js": "eslint . --fix",
